...

import '../../../../core/enums/feedback_type_enum.dart';
import '../../../../core/feedback/global_feedback_handler.dart';
import '../../../../core/result/result.dart';
import '../../../../root_screen.dart'; // TODO: This might be anti-pattern:
// Usually a feature screen should not depend on RootScreen. However, since
// we want to implement this special requirement: Pressing "Guest Login"
// should lead to MyStringScreen, we have to access RootScreen.
import '../../../../shared/enums/app_tab_enum.dart';
import '../../domain/entity/auth_entity.dart';
import '../bloc/auth_bloc.dart';
import '../bloc/auth_event.dart';
import '../bloc/auth_state.dart';
...
                      // Do not check mounted for button callbacks.
                      setState(() {
                        _showMoreOptions = !_showMoreOptions;
                      });
                      //}
                    },
                    child: Text(_showMoreOptions ? 'Fewer Options' : 'More Options'),
                  ),
                  if (_showMoreOptions)
                    Column(
                      children: [
                        ElevatedButton(
                          onPressed: _guestLogin,
...
