...
                ),
                const SizedBox(height: AppDimens.buttonSpacing),
                Row(
                  children: [
                    Expanded(
                      child: ElevatedButton.icon(
                        key: const Key('updateFromUserButton'),
                        onPressed: isLoading ? null : updateFromUser,
                        icon: const Icon(Icons.person),
                        label: const Text(AppConstants.updateFromUserLabel),
                      ),
                    ),
                    const SizedBox(width: AppDimens.buttonSpacing),
...
